@@ -80,6 +80,7 @@ Bug fixes:
 - multiple reports may now be appended in the same report file
 - fixed phpunit-growl.xml configuration file: display icons to both pear or stand-alone installation
 - avoid php warnings when argument to list command (of CLI tool) is invalid (requires Console_CommandLine 1.2.0 or better)
+- depending of typeHint (interface, class), report now in the real category rather than just in classes
 "
 
 [require]
